--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
     left: 0;
     width: 100%;
     padding: 20px 10%;
-    background: yellowgreen;
+    background: #081b29;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -27,10 +27,23 @@ body{
 }
 
 .logo{
+    position: relative;
     font-size: 25px;
     color: #ededed;
     text-decoration: none;
     font-weight: 600;
+}
+
+.logo::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: #081b29;
+    animation: showRight 1s ease forwards;
+    animation-delay: 1s;
 }
 
 .nav a{
@@ -42,12 +55,15 @@ body{
     transition: .3s;
 }
 
-.nav a:hover, .nav a.active{
+.nav a:hover, 
+.nav a.active{
     color: #3e78c4;
 }
 .home{
     height: 100vh;
-    background: url();
+    background: url() no-repeat; /* This task is not comp...*/
+    background-size: cover;
+    background-position: center;
     display: flex;
     align-items: center;
     padding: 0 10%;
@@ -59,15 +75,17 @@ body{
 }
 
 .home-content h1{
+    position: relative;
     font-size: 56px;
     font-weight: 700;
-    line
+    line-height: 1.2;
 }
 
 .home-content h3{
+    position: relative;
     font-size: 32px;
     font-weight: 700;
-    color::;
+    color: #00abf0;
 }
 
 .home-content p{
@@ -151,7 +169,7 @@ body{
     position: relative;
     display: inline-flex;
     justify-content: center;
-    align-content: center;
+    align-items: center;
     width: 40px;
     height: 40px;
     background: transparent;
@@ -183,4 +201,27 @@ body{
 
 .home-sci a:hover::before{
     width: 100%;
+}
+
+.home-imgHover{
+    position: absolute;
+    top: 0;
+    right: 30px;
+    width: 500px;
+    height: 100%;
+    background: transparent;
+    transition: 3s;
+}
+
+.home-imgHover:hover{
+    background: #02151d;
+    opacity: 0.8;
+}
+
+/* KEYFRAME ANIMATION */
+
+@keyframes showRight {
+    100%{
+        width: 0;
+    }
 }
