--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body{
 }
 .home{
     height: 100vh;
-    background: url() no-repeat; /* This task is not comp...*/
+    background: url('Untitled design.png') no-repeat; /* This task is not comp...*/
     background-size: cover;
     background-position: center;
     display: flex;
@@ -206,8 +206,8 @@ body{
 .home-imgHover{
     position: absolute;
     top: 0;
-    right: 30px;
-    width: 500px;
+    right: 0px;
+    width: 600px;
     height: 100%;
     background: transparent;
     transition: 3s;
